--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -11,7 +11,7 @@ source:
   sha256: 75e17fcaa4fc5fdddbe6eb42aca5f38c4c169a4b52756e74fbe2d1769737ac9c
 
 build:
-  number: 0
+  number: 1
   skip: true  # [win]
 
 requirements:
@@ -20,11 +20,11 @@ requirements:
     - libtool
     - m4
     - gmp >=5.0.1,<7
-    - mpfr 3.*
+    - mpfr 4.*
     - qd 2.3.*
   run:
     - gmp >=5.0.1,<7
-    - mpfr 3.*
+    - mpfr 4.*
     - qd 2.3.*
 
 test:
@@ -45,3 +45,4 @@ about:
 extra:
   recipe-maintainers:
     - isuruf
+    - saraedum
