--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -16,15 +16,16 @@ build:
 
 requirements:
   build:
-    - toolchain
+    - {{ compiler('cxx') }}
     - libtool
     - m4
-    - gmp >=5.0.1,<7
-    - mpfr 4.*
+  host:
+    - gmp
+    - mpfr
     - qd 2.3.*
   run:
-    - gmp >=5.0.1,<7
-    - mpfr 4.*
+    - gmp
+    - mpfr
     - qd 2.3.*
 
 test:
