--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -13,6 +13,8 @@ source:
 build:
   number: 1
   skip: true  # [win]
+  run_exports:
+    - {{ pin_subpackage('fplll', max_pin='x.x') }}
 
 requirements:
   build:
